added point 5, point 6 yet to complete. - Khwaab

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -38,6 +38,9 @@
           </tbody>
         </table>
       </div>
+      <div class="button-container">
+        <a href="/find-Items" class="btn">Find Items</a>
+      </div>
     </section>
 
     <section id="orders" class="data-section">
@@ -68,7 +71,13 @@
       </div>
 
       <div class="button-container">
+        <a href="/start-order" class="btn">Start new Order</a>
+      </div>
+      <div class="button-container">
         <a href="/find-orders" class="btn">Find Orders</a>
+      </div>
+      <div class="button-container">
+        <a href="/add-to-order" class="btn">Add to Order</a>
       </div>
     </section>
     <section id="donations" class="data-section">
