Added functionality to prepare orders (part 7)

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -79,6 +79,9 @@
       <div class="button-container">
         <a href="/add-to-order" class="btn">Add to Order</a>
       </div>
+      <div class="button-container">
+        <a href="/prepare-order" class="btn">Prepare Order</a>
+      </div>
     </section>
     <section id="donations" class="data-section">
       <h2>Recent Donations</h2>
