--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <title>Welcome Home</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='../static/style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     {% with messages = get_flashed_messages(with_categories=true) %}
