--- a/templates/dashboard/orders.html
+++ b/templates/dashboard/orders.html
@@ -11,6 +11,7 @@
             {% if 'volunteer' in session['roles'] or 'staff' in session['roles'] or 'client' in session['roles']%}
             <a href="{{ url_for('add_to_order') }}" class="btn primary">Add to Order</a>
             <a href="{{ url_for('prepare_order') }}" class="btn primary">Prepare Order</a>
+            <a href="{{ url_for('view_ranking') }}" class="btn primary">View Ranking</a>
             {% endif %}
         </div>
     </div>
